tdf#117364 Special Character dialog grid font issues

Revert "tdf#113643 Editing tables in Impress lags terribly"
This reverts commit 13a1bc409d9b2f0d14f4d316b7977b1fc2eb3c8a.

Will probably need more sophisticated caching, so just revert this
for now.

Change-Id: I05cc26b911d3d138b57098656ea0c9c3c4e82592
Reviewed-on: https://gerrit.libreoffice.org/53784
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>