vcl/inc/win/salgdi.h
@@ -177,7 +177,6 @@ private:
     RGNDATA*                mpClipRgnData;      // ClipRegion-Data
     RGNDATA*                mpStdClipRgnData;   // Cache Standard-ClipRegion-Data
     int                     mnPenWidth;         // line width
-    const PhysicalFontFace* mpCurrentPhysicalFontFace; // the font face currently selected into the DC
 
     LogicalFontInstance* GetWinFontEntry(int nFallbackLevel);
 
